@@ -89,4 +89,5 @@
 - document find-window
 - document split-window -p and -l
 - attach should have a flag to create session if it doesn't exist
-- do mouse mode properly and fix it when window is split
+- support mouse in copy mode
+- fix page up/down in choice mode AGAIN
